Base Code changes for JWT, User and Tenant

--- a/service-layer/telt-user-mgmt-service/src/main/resources/application.properties
+++ b/service-layer/telt-user-mgmt-service/src/main/resources/application.properties
@@ -1,14 +1,11 @@
 spring.application.name=TELT User Management Service
 spring.cloud.config.enabled=false
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/TELT
 spring.datasource.username=postgres
 spring.datasource.password=1234567890
-
 server.port=5050
-
 # Hibernate properties(Postgres)
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto=update
