--- a/service-layer/telt-user-mgmt-service/src/main/resources/application.properties
+++ b/service-layer/telt-user-mgmt-service/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+server.servlet.context-path=/telt/api
