Changes for adding the address information for all the users

--- a/service-layer/telt-user-mgmt-service/src/main/resources/application.properties
+++ b/service-layer/telt-user-mgmt-service/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/telt/api
+hibernate.hbm2ddl.auto=validate
